test_suite/tests/compile-fail/str_ref_deser.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize, Deserialize)] //~ ERROR: proc-macro derive panicked
struct Test<'a> {
    s: &'a str, //~^^ HELP: Serde does not support deserializing fields of type &str
}

fn main() {}
